--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test:watch": "npm test -- --watch",
     "cover": "nyc --check-coverage npm run test:only",
     "lint": "eslint client/src/package",
-    "build": "cross-env BABEL_ENV=production babel  --root-mode upward client/src/package --out-dir lib",
-    "prepublish": "npm run clean && npm run lint && npm run test && npm run build",
+    "package:build": "cross-env BABEL_ENV=production babel  --root-mode upward client/src/package --out-dir lib",
+    "package:prepublish": "npm run clean && npm run lint && npm run test && npm run package:build",
     "client": "cd client && npm start",
     "server": "nodemon server.js",
     "react:build": "cd client && npm run build",
@@ -46,7 +46,7 @@
     "tournament",
     "game"
   ],
-  "author": "Paul Gadi <paul@alto.io> (polats.com)",
+  "author": "Paul Gadi <paul@alto.io> (https://polats.com)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/polats/arcade/issues"
