--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "express": "^4.17.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
