--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react:build": "cd client && npm run build",
     "dev": "concurrently --kill-others-on-fail \"npm run client\" \"npm run server\"",
     "heroku-postbuild": "cd client && npm install",
-    "start": "node server.js"
+    "start": "node server.js",
+    "truffle:compile": "truffle compile",
+    "truffle:deploy": "truffle deploy"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -75,7 +77,11 @@
     "nodemon": "^1.19.1",
     "nyc": "^13.3.0",
     "react-test-renderer": "^16.8.6",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "dotenv": "^8.0.0",
+    "openzeppelin-solidity": "^2.2.0",
+    "truffle": "5.0.8",
+    "truffle-hdwallet-provider": "1.0.5"
   },
   "proxy": "http://localhost:5000/",
   "browserslist": [
