--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "heroku-postbuild": "cd client && npm install",
     "start": "node server.js",
     "truffle:compile": "truffle compile",
-    "truffle:deploy": "truffle deploy"
+    "truffle:deploy": "truffle deploy",
+    "truffle:test": "truffle test"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -67,6 +68,7 @@
     "chai": "^4.1.2",
     "concurrently": "^4.1.0",
     "cross-env": "^5.1.3",
+    "dotenv": "^8.0.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.13.2",
     "eslint-config-airbnb": "^17.1.0",
@@ -76,11 +78,11 @@
     "mocha": "^6.1.3",
     "nodemon": "^1.19.1",
     "nyc": "^13.3.0",
+    "openzeppelin-solidity": "^2.2.0",
     "react-test-renderer": "^16.8.6",
     "rimraf": "^2.6.2",
-    "dotenv": "^8.0.0",
-    "openzeppelin-solidity": "^2.2.0",
     "truffle": "5.0.8",
+    "truffle-assertions": "^0.9.1",
     "truffle-hdwallet-provider": "1.0.5"
   },
   "proxy": "http://localhost:5000/",
