--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "dapparatus": "^1.0.74",
     "express": "^4.17.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.0.1",
+    "web3": "^1.0.0-beta.55"
   },
   "files": [
     "lib",
