--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start": "node server.js",
     "truffle:compile": "truffle compile",
     "truffle:deploy": "truffle deploy",
-    "truffle:test": "truffle test"
+    "truffle:test": "truffle test",
+    "contracts:copy": "cp -a ./build/contracts/. ./client/src/contracts/ && create-index ./client/src/contracts -x json"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -69,6 +70,7 @@
     "babel-preset-minify": "^0.5.0",
     "chai": "^4.1.2",
     "concurrently": "^4.1.0",
+    "create-index": "^2.4.0",
     "cross-env": "^5.1.3",
     "dotenv": "^8.0.0",
     "enzyme": "^3.9.0",
