--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "dapparatus": "^1.0.74",
+    "deepmerge": "^3.2.1",
     "express": "^4.17.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
