--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "bignumber.js": "^9.0.0",
     "dapparatus": "^1.0.74",
     "deepmerge": "^3.2.1",
     "express": "^4.17.1",
@@ -68,7 +69,11 @@
     "@babel/preset-react": "^7.0.0",
     "babel-plugin-add-module-exports": "^1.0.0",
     "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-minify": "^0.5.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "concurrently": "^4.1.0",
     "create-index": "^2.4.0",
@@ -86,7 +91,7 @@
     "openzeppelin-solidity": "^2.2.0",
     "react-test-renderer": "^16.8.6",
     "rimraf": "^2.6.2",
-    "truffle": "5.0.8",
+    "truffle": "^5.0.24",
     "truffle-assertions": "^0.9.1",
     "truffle-hdwallet-provider": "1.0.5"
   },
