--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "client": "cd client && npm start",
     "server": "nodemon server.js",
     "react:build": "cd client && npm run build",
-    "dev": "npm run truffle:compile && npm run contracts:copy && concurrently --kill-others-on-fail \"npm run client\" \"npm run server\"",
+    "dev:local": "npm run truffle:compile && npm run contracts:copy && concurrently --kill-others-on-fail \"npm run client\" \"npm run server\"",
     "heroku-postbuild": "cd client && npm install",
     "start": "node server.js",
     "truffle:compile": "truffle compile",
