--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: node_js
 node_js:
   - '8'
-  - '6'
 script:
-  - npm run test
-  - npm run build
+  - npm run travis:test
 branches:
   only:
     - master
