--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dapparatus": "^1.0.74",
     "deepmerge": "^3.2.1",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "^3.0.1",
