--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "async": "^3.1.0",
     "babel-plugin-add-module-exports": "^1.0.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
@@ -87,6 +88,7 @@
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
+    "ethereumjs-util": "^6.1.0",
     "mocha": "^6.1.3",
     "nodemon": "^1.19.1",
     "nyc": "^13.3.0",
